# Mordoku

./: LICENSE  README.md  Start.md  pyproject.toml  requirements-dev.txt
docs/: CONTRIBUTING.md
src/mordoku/: __init__.py  main.py
tests/: __init__.py  test_main.py
